Added About Page

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,8 @@
         </div>
       </div>
       <div class="links">
+        <a href="{{ url_for('dashboard') }}" class="nav-link">Home</a>
+        <a href="{{ url_for('about') }}" class="nav-link">About</a>
         <button id="themeToggle" class="nav-btn small">Toggle Theme</button>
         <a href="https://flask.palletsprojects.com/" target="_blank" class="nav-btn">Flask Docs ↗</a>
       </div>
